<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zenith Browser</string>
    <string name="search_hint">Search or enter URL</string>
    <string name="new_tab">New tab</string>
    <string name="close_tab">Close tab</string>
    <string name="close_all_tabs">Close all tabs</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="history">History</string>
    <string name="clear_history">Clear history</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="extensions">Extensions</string>
    <string name="new_incognito_tab">New incognito tab</string>
    <string name="incognito_mode">Incognito</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="reload">Reload</string>
    <string name="stop">Stop</string>
    <string name="find_in_page">Find in page</string>
    <string name="desktop_site">Desktop site</string>
    <string name="share">Share</string>
    <string name="open_in_external">Open in external app</string>
    <string name="devtools">Developer Tools</string>
    <string name="view_source">View source</string>
    <string name="page_info">Page info</string>
    <string name="add_to_home">Add to home screen</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="install">Install</string>
    <string name="uninstall">Uninstall</string>
    <string name="loading">Loading…</string>
    <string name="no_tabs">No tabs open</string>
    <string name="no_bookmarks">No bookmarks yet</string>
    <string name="no_history">No browsing history</string>
    <string name="no_downloads">No downloads</string>
    <string name="no_extensions">No extensions installed</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="version">Version %1$s</string>
    <string name="clear_browsing_data">Clear browsing data</string>
    <string name="browsing_data_cleared">Browsing data cleared</string>
    <string name="download_started">Download started</string>
    <string name="download_complete">Download complete</string>
    <string name="download_failed">Download failed</string>
    <string name="file_not_supported">File type not supported</string>
    <string name="install_extension">Install extension from .crx or .zip?</string>
    <string name="extension_installed">Extension installed successfully</string>
    <string name="extension_failed">Failed to install extension</string>
    <string name="javascript_enabled">JavaScript</string>
    <string name="cookies_enabled">Cookies</string>
    <string name="block_popups">Block pop-ups</string>
    <string name="dark_mode">Dark mode</string>
    <string name="system_default">System default</string>
    <string name="follow_system">Follow system</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="search_engine">Search engine</string>
    <string name="homepage">Homepage</string>
    <string name="default_homepage">zenith://newtab</string>
    <string name="user_agent">User agent</string>
    <string name="default_user_agent">Default</string>
    <string name="desktop_user_agent">Desktop</string>
    <string name="custom_user_agent">Custom</string>
    <string name="text_size">Text size</string>
    <string name="ad_blocker">Ad blocker</string>
    <string name="do_not_track">Do Not Track</string>
    <string name="save_data">Save data</string>
    <string name="media_autoplay">Media autoplay</string>
    <string name="allow_location">Allow location access</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="allow_camera">Allow camera access</string>
    <string name="allow_microphone">Allow microphone access</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="privacy">Privacy</string>
    <string name="advanced">Advanced</string>
    <string name="accessibility">Accessibility</string>
    <string name="general">General</string>
    <string name="appearance">Appearance</string>
    <string name="content_settings">Site settings</string>
    <string name="restore_tabs">Restore previous tabs on startup</string>
    <string name="tabs_in_drawer">Show tabs in drawer</string>
    <string name="confirm_close_tab">Confirm before closing all tabs</string>
    <string name="tab_closed_undo">Tab closed. Tap to undo.</string>
    <string name="tabs_count">%1$d tabs</string>
    <string name="download_in_progress">%1$d downloads in progress</string>
    <string name="extension_permissions">This extension needs permission to:</string>
    <string name="install_confirm">Install extension?</string>
    <string name="extension_name">Extension name</string>
    <string name="extension_version">Version %1$s</string>
    <string name="extension_author">By %1$s</string>
    <string name="extension_description">Description</string>
    <string name="permissions">Permissions</string>
    <string name="storage">Storage</string>
    <string name="tabs">Tabs</string>
    <string name="menu">Menu</string>
    <string name="new_tab_shortcut">New Tab</string>
    <string name="incognito_shortcut">Incognito Tab</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="history_cleared">History cleared</string>
    <string name="cannot_open_file">Cannot open file</string>
    <string name="ssl_error">Security error: the certificate for this site is not trusted.</string>
    <string name="ssl_error_continue">Continue anyway (unsafe)</string>
    <string name="ssl_error_go_back">Go back (recommended)</string>
    <string name="multiple_windows">Multiple windows not supported</string>
    <string name="devtools_description">Integrated developer tools - Inspect, debug and profile web pages</string>
    <string name="eruda_console">Console</string>
    <string name="eruda_elements">Elements</string>
    <string name="eruda_network">Network</string>
    <string name="eruda_resources">Resources</string>
    <string name="eruda_sources">Sources</string>
    <string name="eruda_info">Info</string>
    <string name="eruda_storage">Storage</string>
    <string name="add_extension">Add extension</string>
    <string name="open_from_storage">Open from storage</string>
    <string name="open_from_url">Open from URL</string>
    <string name="extension_url_hint">Extension URL (.crx or .zip)</string>
    <string name="manage_extensions">Manage extensions</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="open_in_background">Open in background</string>
    <string name="copy_link">Copy link</string>
    <string name="copy_image_url">Copy image URL</string>
    <string name="view_image">View image</string>
    <string name="download_image">Download image</string>
    <string name="open_in_group">Open in group</string>
    <string name="create_group">Create group</string>
    <string name="rename_group">Rename group</string>
    <string name="delete_group">Delete group</string>
    <string name="ungroup_tabs">Ungroup all tabs</string>
    <string name="link_copied">Link copied</string>
    <string name="image_url_copied">Image URL copied</string>
    <string name="downloading_image">Downloading image…</string>
    <string name="tab_opened_background">Tab opened in background</string>
    <string name="no_groups">No groups yet</string>
    <string name="tab_groups">Tab Groups</string>
    <string name="all_tabs">All</string>
    <string name="close_all_tabs_confirm">Close all tabs?</string>
</resources>
